fix hover for overflow buttons

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -595,6 +595,7 @@ a:hover {
 .overflowButton {
   cursor:pointer;
   z-index: 100000;
+  overflow: visible;
 
   .wrapperButton {
     cursor: pointer;
